--- a/views/css/style.css
+++ b/views/css/style.css
@@ -62,13 +62,13 @@ body {
   /*border: 1px solid #ccc;*/
 }
 .search .results .description a {
-  color: #2A86B5;
+  color: #FF9900;
 }
 .search.showing-results .results {
   opacity: 1;
 }
 .search.active .search-input {
-  border-color: #2A86B5;
+  border-color: #FF9900;
   width: 100%;
   border-radius: 0px;
 }
@@ -82,7 +82,6 @@ body {
 .search.active button {
   opacity: 1;
 }
-
 .search-input {
   background: white;
   display: inline-block;
@@ -123,9 +122,8 @@ body {
   /* ? */
   left: 0px;
   opacity: 0;
-  color: #2A86B5;
+  color: #FF9900;
 }
-
 .button-row {
   text-align: center;
   position: relative;
@@ -157,7 +155,27 @@ body {
 .button-row #clear:hover {
   color: #777;
 }
-
 .quick-hide {
   display: none;
+}
+.custom-file-uploader {
+  position: relative;
+}
+.custom-file-uploader input[type="file"] {
+  display: block;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 5;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  cursor: default;
+}
+.center-div
+{
+     margin: 0 auto;
+     width: 100px; 
 }
