--- a/views/css/style.css
+++ b/views/css/style.css
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=Raleway:400,300,600,400italic);
 * {
   box-sizing: border-box;
 }
@@ -5,15 +6,28 @@
 body {
   margin: 10px;
   text-align: center;
-  font-family: "Roboto";
+  font-family: "Raleway";
   font-size: 18px;
 }
-
+/* Grid for images */
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(8, 5vw);
+  grid-gap: 1.5rem; 
+}
+.gallery__img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block; 
+}
 .search {
   width: 620px;
   padding: 20px;
   margin: 0px;
   display: inline-block;
+  font-family: "Raleway";
   text-align: center;
   transform: translateY(150px);
   position: relative;
@@ -124,6 +138,7 @@ body {
   opacity: 0;
   color: #FF9900;
 }
+
 .button-row {
   text-align: center;
   position: relative;
