--- a/views/html/index.html
+++ b/views/html/index.html
@@ -28,41 +28,44 @@
 
     <body>
       <!-- Real-time search using Amazon Transcribe -->
-      <div class="search">
-          <form method="GET">
-            <div class="search-input">
-              <i class="zmdi zmdi-search zmdi-hc-2x"></i> 
-              <input type="text" id="search-phrase" name="q"/>
-              <i class="zmdi zmdi-mic zmdi-hc-2x"></i>
-            </div>
-            <div class="results">
-            </div>
-            <!-- Search Bar buttons -->
-            <div class="button-row">
-              <button id="search" type="submit" onclick="searchPhotosS3()">Search</button>
-              <button id="start-btn" title="Start Recording"><i class="zmdi zmdi-play-circle-outline zmdi-hc-lg"></i></button>
-              <button id="pause-btn" title="Pause Recording"><i class="zmdi zmdi-pause-circle-outline zmdi-hc-lg"></i></button>
-              <div id="clear">Clear All</div>
-            </div>
-          </form>
+      <div class="container">
+        <div class="app">
+          <div class="search">
+              <form method="GET">
+                <div class="search-input">
+                  <i class="zmdi zmdi-search zmdi-hc-2x"></i> 
+                  <input type="text" id="search-phrase" name="q"/>
+                  <i class="zmdi zmdi-mic zmdi-hc-2x"></i>
+                </div>
+                <div class="results">
+                </div>
+                <!-- Search Bar buttons -->
+                <div class="button-row">
+                  <button id="search" type="submit" onclick="searchPhotosS3()">Search</button>
+                  <button id="start-btn" title="Start Recording"><i class="zmdi zmdi-play-circle-outline zmdi-hc-lg"></i></button>
+                  <button id="pause-btn" title="Pause Recording"><i class="zmdi zmdi-pause-circle-outline zmdi-hc-lg"></i></button>
+                  <div id="clear">Clear All</div>
+                </div>
+              </form>
 
-          <!-- TODO: Image grid for search results -->
-          <div class="gallery">
-              <!-- <figure class=”gallery__item gallery__item--1"> -->
-                  <!-- <img src="img/image-1.jpg" class="gallery__img" alt="Image 1"> -->
-              <!-- </figure> -->
-          </div>
+              <!-- TODO: Image grid for search results -->
+              <p id="uploadText"></p>
+              <div>
+                <div class="banner-section" id="img-container">
+                  <p id="displaytext"></p>
+                </div>
+              </div>
 
-          <h3 id="result" style="color: green;"></h3>
-          
-          <!-- <div class="input-group" style="margin-top:30px;"> -->
-          <div class="input-group">
-            <input type="file" class="form-control" name="search" id="file_path">
-            <button id="upload-btn" title="Upload photos" type="submit" onclick="uploadPhotosS3()"><i class="zmdi zmdi-cloud-upload zmdi-hc-lg"></i></button>
+              <h3 id="result" style="color: green;"></h3>
+              
+              <!-- <div class="input-group" style="margin-top:30px;"> -->
+              <div class="input-group">
+                <input type="file" class="form-control" name="search" id="file_path">
+                <button id="upload-btn" title="Upload photos" type="submit" onclick="uploadPhotosS3()"><i class="zmdi zmdi-cloud-upload zmdi-hc-lg"></i></button>
+                </div>
             </div>
-          </div>
+        </div>    
       </div>
-
     </body>
   </head>
 </html>
