--- a/views/html/index.html
+++ b/views/html/index.html
@@ -9,6 +9,9 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css"> 
       <!-- Latest compiled and minified CSS -->
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+      <!-- AWS Transcribe part -->
+      <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+      <script type="text/javascript" src="../js/recorder.mp3.min.js"></script>
       <!-- AWS SDK apigClient -->
       <script type="text/javascript" src="../js/lib/axios/dist/axios.standalone.js"></script>
       <script type="text/javascript" src="../js/lib/CryptoJS/rollups/hmac-sha256.js"></script>
@@ -21,17 +24,16 @@
       <script type="text/javascript" src="../js/lib/apiGatewayCore/simpleHttpClient.js"></script>
       <script type="text/javascript" src="../js/lib/apiGatewayCore/utils.js"></script>
       <script type="text/javascript" src="../js/apigClient.js"></script>
-      <!-- File upload script -->
+      <!-- AWS Transcibe and File upload script -->
       <script type="text/javascript" src="../js/main.js"></script>
       <!-- AWS Transcribe script -->
-      <script type="text/javascript" src="../js/transcribe.js"></script>
+      <!-- <script type="text/javascript" src="../js/notes.js"></script> -->
 
     <body>
       <!-- Real-time search using Amazon Transcribe -->
       <div class="container">
-        <div class="app">
           <div class="search">
-              <form method="GET">
+              <form method="get">
                 <div class="search-input">
                   <i class="zmdi zmdi-search zmdi-hc-2x"></i> 
                   <input type="text" id="search-phrase" name="q"/>
@@ -41,7 +43,7 @@
                 </div>
                 <!-- Search Bar buttons -->
                 <div class="button-row">
-                  <button id="search" type="submit" onclick="searchPhotosS3()">Search</button>
+                  <button id="search-btn" type="submit">Search</button>
                   <button id="start-btn" title="Start Recording"><i class="zmdi zmdi-play-circle-outline zmdi-hc-lg"></i></button>
                   <button id="pause-btn" title="Pause Recording"><i class="zmdi zmdi-pause-circle-outline zmdi-hc-lg"></i></button>
                   <div id="clear">Clear All</div>
@@ -57,11 +59,11 @@
               </div>
 
               <h3 id="result" style="color: green;"></h3>
-              
-              <!-- <div class="input-group" style="margin-top:30px;"> -->
+              <!-- File upload -->
               <div class="input-group">
                 <input type="file" class="form-control" name="search" id="file_path">
-                <button id="upload-btn" title="Upload photos" type="submit" onclick="uploadPhotosS3()"><i class="zmdi zmdi-cloud-upload zmdi-hc-lg"></i></button>
+                <input type="button" class="button" value="Upload photos" id="upload-btn">
+                <!-- <button id="upload-btn" title="Upload photos" type="submit" onclick="uploadPhotosS3()"><i class="zmdi zmdi-cloud-upload zmdi-hc-lg"></i></button> -->
                 </div>
             </div>
         </div>    
