--- a/views/html/index.html
+++ b/views/html/index.html
@@ -26,8 +26,9 @@
       <script type="text/javascript" src="../js/apigClient.js"></script>
       <!-- AWS Transcibe and File upload script -->
       <script type="text/javascript" src="../js/main.js"></script>
-      <!-- AWS Transcribe script -->
-      <!-- <script type="text/javascript" src="../js/notes.js"></script> -->
+      <!-- inserting these scripts at the end to be able to use all the elements in the DOM -->
+      <!-- <script src="https://cdn.rawgit.com/mattdiamond/Recorderjs/08e7abd9/dist/recorder.js"></script>
+      <script src="js/app.js"></script> -->
 
     <body>
       <!-- Real-time search using Amazon Transcribe -->
