--- a/views/html/index.html
+++ b/views/html/index.html
@@ -9,9 +9,6 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css"> 
       <!-- Latest compiled and minified CSS -->
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-      <!-- AWS Transcribe part -->
-      <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-      <script type="text/javascript" src="../js/recorder.mp3.min.js"></script>
       <!-- AWS SDK apigClient -->
       <script type="text/javascript" src="../js/lib/axios/dist/axios.standalone.js"></script>
       <script type="text/javascript" src="../js/lib/CryptoJS/rollups/hmac-sha256.js"></script>
@@ -24,12 +21,6 @@
       <script type="text/javascript" src="../js/lib/apiGatewayCore/simpleHttpClient.js"></script>
       <script type="text/javascript" src="../js/lib/apiGatewayCore/utils.js"></script>
       <script type="text/javascript" src="../js/apigClient.js"></script>
-      <!-- AWS Transcibe and File upload script -->
-      <script type="text/javascript" src="../js/main.js"></script>
-      <!-- inserting these scripts at the end to be able to use all the elements in the DOM -->
-      <!-- <script src="https://cdn.rawgit.com/mattdiamond/Recorderjs/08e7abd9/dist/recorder.js"></script>
-      <script src="js/app.js"></script> -->
-
     <body>
       <!-- Real-time search using Amazon Transcribe -->
       <div class="container">
@@ -51,6 +42,11 @@
                 </div>
               </form>
 
+              <!-- Transcriptions -->
+              <div id="formats"></div>
+              <h4>Recordings</h4>
+              <ol id="recordingsList"></ol>
+
               <!-- TODO: Image grid for search results -->
               <p id="uploadText"></p>
               <div>
@@ -68,6 +64,10 @@
             </div>
         </div>    
       </div>
+      <!-- Inserting these scripts at the end to be able to use all the elements in the DOM -->
+      <script src="https://cdn.rawgit.com/mattdiamond/Recorderjs/08e7abd9/dist/recorder.js"></script>
+      <!-- AWS Transcibe and File upload script -->
+      <script type="text/javascript" src="../js/main.js"></script>
     </body>
   </head>
 </html>
